p3/confs/ingress.yaml
# kubectl port-forward svc/argocd-server -n argocd 8080:443 --address 0.0.0.0 &
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost.argocd
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: argocd-server
              port:
                number: 443
